--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     <!-- Bootstrap JS (for modals) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        const API_URL = "const API_URL = "https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbwwMfNQg_cIf7U0xU9cEyjH7noA0CmFhDueOd3thdJTpsQHj9z-nmZAOwUipxc0EDHOFA/exec";"; // Replace with your Google Apps Script Web App URL
+        const API_URL = "https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbwwMfNQg_cIf7U0xU9cEyjH7noA0CmFhDueOd3thdJTpsQHj9z-nmZAOwUipxc0EDHOFA/exec";"; // Replace with your Google Apps Script Web App URL
         const POLL_INTERVAL = 30000; // 30 seconds
 
         let inventory = [];
