--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Inventory Management</title>
+  <!-- Favicon (optional: add favicon.ico to your repository) -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -202,6 +204,10 @@
         }
         const data = await response.json();
         console.log(`Data received for ${method}:`, data);
+        if (data && data.error) {
+          console.warn(`Error in ${method}: ${data.error}`);
+          return [];
+        }
         return data;
       } catch (error) {
         console.error(`Error fetching ${method}:`, error);
@@ -211,10 +217,11 @@
 
     // Fetch all data and update UI
     async function fetchAllData() {
-      const inventory = await fetchData("getInventory");
-      const usageLog = await fetchData("getUsageLog");
-      const receivedLog = await fetchData("getReceivedLog");
-      console.log("Inventory data in fetchAllData:", inventory); // Debug log
+      const inventory = await fetchData("getInventory") || [];
+      const usageLog = await fetchData("getUsageLog") || [];
+      const receivedLog = await fetchData("getReceivedLog") || [];
+
+      console.log("Inventory data in fetchAllData:", inventory);
 
       updateInventoryTable(inventory);
       updateUsageLogTable(usageLog);
@@ -319,37 +326,44 @@
 
     // Populate item dropdowns for Log Usage and Add Inventory
     function populateItemDropdowns(inventory) {
-  console.log("Populating dropdowns with inventory:", inventory); // Debug log
+      console.log("Populating dropdowns with inventory:", inventory);
 
-  const usageItemSelect = document.getElementById("usageItem");
-  const addItemSelect = document.getElementById("addItem");
+      const usageItemSelect = document.getElementById("usageItem");
+      const addItemSelect = document.getElementById("addItem");
 
-  console.log("usageItemSelect element:", usageItemSelect); // Debug log
-  console.log("addItemSelect element:", addItemSelect); // Debug log
+      console.log("usageItemSelect element:", usageItemSelect);
+      console.log("addItemSelect element:", addItemSelect);
 
-  if (!usageItemSelect || !addItemSelect) {
-    console.error("Dropdown elements not found!");
-    return;
-  }
+      if (!usageItemSelect || !addItemSelect) {
+        console.error("Dropdown elements not found!");
+        return;
+      }
 
-  usageItemSelect.innerHTML = '<option value="">Select an item</option>';
-  addItemSelect.innerHTML = '<option value="">Select an item</option>';
+      usageItemSelect.innerHTML = '<option value="">Select an item</option>';
+      addItemSelect.innerHTML = '<option value="">Select an item</option>';
 
-  inventory.forEach(item => {
-    console.log("Adding item to dropdown:", item.name); // Debug log
-    const option1 = document.createElement("option");
-    option1.value = item.name;
-    option1.textContent = item.name;
-    usageItemSelect.appendChild(option1);
+      if (!Array.isArray(inventory) || inventory.length === 0) {
+        console.error("Inventory is empty or not an array:", inventory);
+        return;
+      }
 
-    const option2 = document.createElement("option");
-    option2.value = item.name;
-    option2.textContent = item.name;
-    addItemSelect.appendChild(option2);
-  });
+      inventory.forEach(item => {
+        const itemName = item.name || item.Name || "Unknown Item";
+        console.log("Adding item to dropdown:", itemName);
+        const option1 = document.createElement("option");
+        option1.value = itemName;
+        option1.textContent = itemName;
+        usageItemSelect.appendChild(option1);
 
-  console.log("Final usageItemSelect HTML:", usageItemSelect.innerHTML); // Debug log
-}
+        const option2 = document.createElement("option");
+        option2.value = itemName;
+        option2.textContent = itemName;
+        addItemSelect.appendChild(option2);
+      });
+
+      console.log("Final usageItemSelect HTML:", usageItemSelect.innerHTML);
+    }
+
     // Log Usage function
     async function logUsage(event) {
       event.preventDefault();
@@ -368,7 +382,7 @@
 
         if (result.success) {
           alert(`Usage logged successfully! New stock: ${result.newStock}`);
-          await fetchAllData(); // Refresh the UI
+          await fetchAllData();
         } else {
           alert(`Failed to log usage: ${result.error}`);
         }
@@ -396,7 +410,7 @@
 
         if (result.success) {
           alert(`Inventory added successfully! New stock: ${result.newStock}`);
-          await fetchAllData(); // Refresh the UI
+          await fetchAllData();
         } else {
           alert(`Failed to add inventory: ${result.error}`);
         }
