--- a/index.html
+++ b/index.html
@@ -18,13 +18,49 @@
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 15px;
     }
     h1, h2, h3 {
       color: #4ECDC4; /* Soft teal for headings */
       font-weight: 500;
     }
-    /* Modern Tabs */
+    h1 {
+      font-size: 1.5rem; /* Smaller heading on mobile */
+    }
+    /* Navigation Styles */
+    .navbar {
+      background-color: #FFF;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+    }
+    .navbar-brand {
+      color: #4ECDC4 !important;
+      font-weight: 600;
+      font-size: 1.2rem;
+    }
+    .navbar-toggler {
+      border: none;
+    }
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(78, 205, 196, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    }
+    .nav-dropdown .nav-link {
+      color: #333;
+      padding: 10px 15px;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+    }
+    .nav-dropdown .nav-link:hover {
+      background-color: #4ECDC4;
+      color: #FFF;
+      border-radius: 8px;
+    }
+    .nav-dropdown .nav-link.active {
+      background-color: #4ECDC4;
+      color: #FFF;
+      border-radius: 8px;
+    }
+    /* Modern Tabs (for larger screens) */
     .nav-tabs {
       border: none;
       display: flex;
@@ -74,7 +110,7 @@
       background-color: #4ECDC4; /* Soft teal buttons */
       border: none;
       border-radius: 8px;
-      padding: 10px 20px;
+      padding: 8px 16px;
       font-weight: 500;
       transition: all 0.3s ease;
     }
@@ -85,9 +121,9 @@
     }
     /* Item Cards */
     .item-card {
-      width: 120px;
-      height: 120px;
-      margin: 10px;
+      width: 100px;
+      height: 100px;
+      margin: 8px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -104,12 +140,12 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
     }
     .item-card img {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 10px;
+      width: 50px;
+      height: 50px;
+      margin-bottom: 8px;
     }
     .item-card span {
-      font-size: 14px;
+      font-size: 12px;
       text-align: center;
       font-weight: 500;
     }
@@ -117,7 +153,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      margin-top: 20px;
+      margin-top: 15px;
     }
     /* Category-specific colors for item cards */
     .item-card.Dairy {
@@ -156,13 +192,98 @@
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
     }
+    /* Responsive Adjustments */
+    @media (max-width: 767.98px) {
+      .nav-tabs {
+        display: none; /* Hide tabs on mobile */
+      }
+      .nav-dropdown {
+        display: block; /* Show dropdown on mobile */
+      }
+      .container {
+        padding: 10px;
+      }
+      h1 {
+        font-size: 1.2rem;
+      }
+      h2 {
+        font-size: 1.1rem;
+      }
+      h3 {
+        font-size: 1rem;
+      }
+      .table {
+        font-size: 0.85rem;
+      }
+      .table thead th {
+        padding: 8px;
+      }
+      .table tbody td {
+        padding: 8px;
+      }
+      .item-card {
+        width: 90px;
+        height: 90px;
+        margin: 5px;
+      }
+      .item-card img {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 5px;
+      }
+      .item-card span {
+        font-size: 11px;
+      }
+      .btn-primary {
+        padding: 6px 12px;
+        font-size: 0.9rem;
+      }
+    }
+    @media (min-width: 768px) {
+      .nav-tabs {
+        display: flex; /* Show tabs on larger screens */
+      }
+      .nav-dropdown {
+        display: none; /* Hide dropdown on larger screens */
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="container mt-4">
-    <h1 class="text-center mb-4">Restaurant Inventory Management</h1>
+  <div class="container">
+    <!-- Mobile Navbar with Dropdown -->
+    <nav class="navbar navbar-expand-md">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Inventory App</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav-dropdown" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#currentStock" data-bs-toggle="tab" id="currentStockTab">Current Stock</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#logUsage" data-bs-toggle="tab" id="logUsageTab">Log Usage</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#addInventory" data-bs-toggle="tab" id="addInventoryTab">Add Inventory</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pastReceived" data-bs-toggle="tab" id="pastReceivedTab">Past Received</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reports" data-bs-toggle="tab" id="reportsTab">Reports</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reorder" data-bs-toggle="tab" id="reorderTab">Reorder</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    <!-- Navigation Tabs -->
+    <!-- Tabs for Larger Screens -->
     <ul class="nav nav-tabs" id="inventoryTabs">
       <li class="nav-item">
         <a class="nav-link active" id="currentStockTab" data-bs-toggle="tab" href="#currentStock">Current Stock</a>
@@ -185,7 +306,7 @@
     </ul>
 
     <!-- Tab Content -->
-    <div class="tab-content mt-4">
+    <div class="tab-content mt-3">
       <!-- Current Stock Tab -->
       <div class="tab-pane fade show active" id="currentStock">
         <h2>Current Stock</h2>
